# SAP-2024-Limerick

./: .gitignore  main.py  pyproject.toml  pyvenv.cfg  requirements.txt  test.py
data/: april_2024.xlsx  august_2024.xlsx  december_2024.xlsx  february_2024.xlsx  january_2024.xlsx  july_2024.xlsx  june_2024.xlsx  march_2024.xlsx  may_2024.xlsx  november_2024.xlsx  october_2024.xlsx  september_2024.xlsx
screens/: add_expense.py  overview.py  view_expense.py
