[tool.poetry]
name = "SAP-2024-Limerick"
version = "0.1.0"
description = ""
authors = ["Jakub Janicki <jjanicki08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
openpyxl = "^3.1.4"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
